--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <h1>Bear Tracker</h1>
-    <button class="btn btn-dark"><i class="fas fa-umbrella-beach"></i> BEARS</button>
+
+<div class="bg-dark m-5 p-4">
+    <h1 class=text-center>Bear Tracker</h1>
+    <form class="form-inline p-2 m-2"> 
+            <div class="form-group p-2">
+                <label for="bear-name" class="pr-3">Bear Name</label>
+                <input type="name" class="form-control" id="bear-name" placeholder="Enter Bear Name" aria-describedby="bearName">
+              </div>
+              <div class="form-group p-2">
+                <label for="image-url" class="pr-3">Image URL</label>
+                <input type="imageURL" class="form-control" placeholder="Enter Image-URL" id="image-url">
+              </div>
+              <div class="pl-5">
+                <button type="submit" class="btn btn-primary p-2">Submit</button>
+              </div>
+      </form>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>    
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="./javascripts/main.js"></script>
+    <script type="module" src="./javascripts/main.js"></script>
 </body>
 </html>
