button working, wip

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <form class=" mx-auto w-75">
         <div class="form-group">
          <label for="bear-name">Bear Name</label>
-          <input type="name" class="form-control" id="bear-name" placeholder="Enter Bear Name" aria-describedby="bearName">
+          <input type="name" class="form-control" id="bear-name-input" placeholder="Enter Bear Name" aria-describedby="bearName">
         </div>
         <div class="form-group">
           <label for="image-url"></label>Image URL</label>
-          <input type="imageURL" class="form-control" placeholder="Enter Image-URL" id="image-url">
+          <input type="imageURL" class="form-control" placeholder="Enter Image-URL" id="image-url-input">
         </div>
-        <button type="submit" id="bear-form-submit" class="btn btn-block text-white">Submit</button>
+        <div>
+            <button type="submit" id="bear-form-submit" class="bear-form-button btn btn-block text-white">Submit</button>
+        </div>
       </form>
 </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
