--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div id="bear-form" class="m-3 p-4 text-white">
     <h1 class="text-center font-weight-bold mb-3 pb-3">Bear Tracker</h1>
-    <form class=" mx-auto w-75">
+    <form id="new-bear" class=" mx-auto w-75">
         <div class="form-group">
          <label for="bear-name">Bear Name</label>
           <input type="name" class="form-control" id="bear-name-input" placeholder="Enter Bear Name" aria-describedby="bearName">
@@ -22,7 +22,7 @@
           <input type="imageURL" class="form-control" placeholder="Enter Image-URL" id="image-url-input">
         </div>
         <div>
-            <button type="submit" id="bear-form-submit" class="bear-form-button btn btn-block text-white">Submit</button>
+            <button type="button" id="bear-form-submit" class="bear-form-button btn btn-block text-white">Submit</button>
         </div>
       </form>
 </div>
