--- a/index.html
+++ b/index.html
@@ -12,22 +12,11 @@
 
 <div id="bear-form" class="m-3 p-4 text-white">
     <h1 class="text-center font-weight-bold mb-3 pb-3">Bear Tracker</h1>
-    <form id="new-bear" class=" mx-auto w-75">
-        <div class="form-group">
-         <label for="bear-name">Bear Name</label>
-          <input type="name" class="form-control" id="bear-name-input" placeholder="Enter Bear Name" aria-describedby="bearName">
-        </div>
-        <div class="form-group">
-          <label for="image-url"></label>Image URL</label>
-          <input type="imageURL" class="form-control" placeholder="Enter Image-URL" id="image-url-input">
-        </div>
-        <div>
-            <button type="button" id="bear-form-submit" class="bear-form-button btn btn-block text-white">Submit</button>
-        </div>
-      </form>
+    <div id="form-builder"></div>
 </div>
 
 <div id="riverBears"></div>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>    
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
